# vocoder-dev

./: 3C10_screen_with_joystick.ino  DAC_SPI.inl  README.md  Wavegen.inl  oscilliscope_working.ino
DRUMS/: CMakeLists.txt  CMakePresets.json  audio_data.h  crash-16bit.h  darude_sandstorm.h  kick-16bit.h  main.c  main.cpp  rick_roll.h  snare-16bit.h  tom1-16bit.h  tom2-16bit.h
GUI/: 3C10_screen_with_joystick.ino
Oscilloscope_lab_maybeworking_copy_20250207160924/vocoder-dev/: README.md
SYNTHESIZER/: synthesizer.ino
drums/: drumset.ino
reporting/: report.html
song_conversion/: audio_data.h  blk_enter_dragon.h  kleber_piano_loop.txt  song_converter.py
tests/: DAC_SPI.inl
